--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
 
                         <div class="unique-card">
                             <div class="stat-card">
-                                <div class="stat-value" id="total-entries">0</div>
-                                <div class="stat-label">
-                                    <div class="stat-icon"><i class="fa-solid fa-sun"></i></div><br> 
+                                <div class="stat-value" id="total-entries" style="color: var(--primary80) !important;">0</div>
+                                <div class="stat-label" style="color: var(--primary-color) !important;">
+                                    <div class="stat-icon" style="color: var(--primary-color) !important;"><i class="fa-solid fa-sun"></i></div><br> 
                                     Registros Diarios
                                 </div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value" id="unique-cards">0</div>
-                                <div class="stat-label">
-                                    <div class="stat-icon"><i class="fa-solid fa-hand-spock"></i></div><br> 
+                                <div class="stat-value" id="unique-cards" style="color: var(--primary80) !important;">0</div>
+                                <div class="stat-label" style="color: var(--primary-color) !important;">
+                                    <div class="stat-icon" style="color: var(--primary-color) !important;"><i class="fa-solid fa-hand-spock"></i></div><br> 
                                     Cartas Únicas
                                 </div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value" id="most-frequent-name">-</div>
-                                <div class="stat-label">
-                                    <div class="stat-icon"><i class="fa-solid fa-crown"></i></div><br>
+                                <div class="stat-value" id="most-frequent-name" style="color: var(--primary80) !important;">-</div>
+                                <div class="stat-label" style="color: var(--primary-color) !important;">
+                                    <div class="stat-icon" style="color: var(--primary-color) !important;"><i class="fa-solid fa-crown"></i></div><br>
                                     <span id="most-frequent-count">Apareció 0 veces</span>
                                 </div>
                             </div>
