--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     <link rel="stylesheet" href="animation.css">
         <link rel="stylesheet" href="ultimo.css">
 
-
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#1742ab">
+<!-- Agrega esto en el <head> -->
+<meta name="application-name" content="Arcana Tarot">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Arcana Tarot">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="msapplication-TileColor" content="#1742ab">
+<meta name="msapplication-tap-highlight" content="no">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
