--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                         <div class="log-history">
                             <div class="history-tabs">
-                                <button class="history-tab active" data-tab="daily"><i class="fa-solid fa-seedling"></i> Cartas del Día</button>
+                                <button class="history-tab active" data-tab="daily"><i class="fa-solid fa-seedling"></i> Dia</button>
                                 <button class="history-tab" data-tab="spread"><i class="fa-solid fa-leaf"></i> Tiradas</button>
                                 <button class="history-tab " data-tab="all"><i class="fa-solid fa-tree"></i> Todos</button>
                             </div>
