--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                         <div class="history-headline">estadísticas de las cartas del día</div>
 
                         <div class="stats-periods">
-                            <button class="period-btn active" data-period="all"><i class="fa-solid fa-infinity"></i> Siempre</button>
-                            <button class="period-btn" data-period="month"><i class="fa-solid fa-fish"></i> Este Mes</button>
+                            <button class="period-btn" data-period="all"><i class="fa-solid fa-infinity"></i> Siempre</button>
+                            <button class="period-btn active" data-period="month"><i class="fa-solid fa-fish"></i> Este Mes</button>
                             <button class="period-btn" data-period="week"><i class="fa-solid fa-fish-fins"></i> Esta Semana</button>
                             <button class="period-btn" id="custom-period-btn" data-period="custom">
                                 <i class="fa-solid fa-frog"></i> Otro Período
@@ -168,7 +168,7 @@
 
                             <div class="chart-title">por Orientación</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="orientation-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="orientation-legend"></div>
@@ -176,7 +176,7 @@
 
                             <div class="chart-title">por Tipos</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="types-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="types-legend"></div>
@@ -184,7 +184,7 @@
 
                             <div class="chart-title">por Elementos</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="elements-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="elements-legend"></div>
@@ -192,7 +192,7 @@
 
                             <div class="chart-title">por Planetas</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="planets-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="planets-legend"></div>
@@ -200,7 +200,7 @@
 
                             <div class="chart-title">por Signos</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="signs-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="signs-legend"></div>
@@ -208,7 +208,7 @@
 
                             <div class="chart-title">por Numerología</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="numerology-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="numerology-legend"></div>
@@ -217,7 +217,7 @@
                             <div class="history-title">Arcanos Mayores</div>
                             <div class="chart-title">por Septenary</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="septenary-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="septenary-legend"></div>
@@ -225,7 +225,7 @@
 
                             <div class="chart-title">por Vertical</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="vertical-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="vertical-legend"></div>
@@ -234,7 +234,7 @@
                             <div class="history-title">Arcanos Menores</div>
                             <div class="chart-title">por Palos</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="suits-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="suits-legend"></div>
@@ -243,7 +243,7 @@
                             <div class="history-title">Arcanos de la Corte</div>
                             <div class="chart-title">por Rango</div>
                             <div class="charts-row">
-                                <div class="chart-container">
+                                <div class="chart-container" style="display:none;">
                                     <canvas id="court-types-chart" width="200" height="200"></canvas>
                                 </div>
                                 <div class="chart-legend" id="court-types-legend"></div>
