cambios necesarios css

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                         <!-- NUEVO: Contenedor con scroll para gráficos -->
                         <div class="container-graphs">
-                                <div class="history-title">TODOS LOS ARCANOS</div>
+                                <div class="chart-title" style="font-size: 1.5rem; color:var(--primary80);">TODOS LOS ARCANOS</div>
 
 
                             <div class="chart-title">por Orientación</div>
@@ -215,7 +215,7 @@
                                 <div class="chart-legend" id="numerology-legend"></div>
                             </div>
 
-                            <div class="history-title">Arcanos Mayores</div>
+                            <div class="chart-title" style="font-size: 1.5rem; color:var(--)">Arcanos Mayores</div>
                             <div class="chart-title">por Septenary</div>
                             <div class="charts-row">
                                 <div class="chart-container" style="display:none;">
@@ -232,7 +232,7 @@
                                 <div class="chart-legend" id="vertical-legend"></div>
                             </div>
 
-                            <div class="history-title">Arcanos Menores</div>
+                            <div class="chart-title" style="font-size: 1.5rem; color:var(--)">Arcanos Menores</div>
                             <div class="chart-title">por Palos</div>
                             <div class="charts-row">
                                 <div class="chart-container" style="display:none;">
@@ -241,7 +241,7 @@
                                 <div class="chart-legend" id="suits-legend"></div>
                             </div>
 
-                            <div class="history-title">Arcanos de la Corte</div>
+                            <div class="chart-title" style="font-size: 1.5rem; color:var(--)">Arcanos de la Corte</div>
                             <div class="chart-title">por Rango</div>
                             <div class="charts-row">
                                 <div class="chart-container" style="display:none;">
